--- a/sponsors.html
+++ b/sponsors.html
@@ -71,10 +71,10 @@
                     <li class="dropdown">
                         <a href="students.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">STUDENTS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="students.html">Introduction</a></li>
-                          <li><a href="students.html">Biotech Academy</a></li>
-                          <li><a href="students.html">Internship</a></li>
-                          <li><a href="students.html">Resources</a></li>                  
+                          <li><a href="students.html">INTRODUCTION</a></li>
+                          <li><a href="students.html">BIOTECH ACADEMY</a></li>
+                          <li><a href="students.html">INTERNSHIP</a></li>
+                          <li><a href="students.html">RESOURCES</a></li>                  
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -87,27 +87,27 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="events.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">News & Events <span class="caret"></span></a>
+                        <a href="events.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">NEWS & EVENTS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="followus.html">Follow Us</a></li>
-                          <li><a href="blog.html">Blog</a></li>
-                          <li><a href="events.html">Upcoming Events</a></li>
-                          <li><a href="events.html">Past Events</a></li>                                             
+                          <li><a href="followus.html">FOLLOW US</a></li>
+                          <li><a href="blog.html">BLOG</a></li>
+                          <li><a href="events.html">UPCOMING EVENTS</a></li>
+                          <li><a href="events.html">PAST EVENTS</a></li>                                             
                         </ul>
                     </li>                    
                     <li>
-                        <a href="contactus.html">Contact Us</a>
+                        <a href="contactus.html">CONTACT US</a>
                     </li>
                     <li>
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN" style="background-color: #337ab7; color: #f8f8f8;">DONATE</a>
-                    </li>                   
+                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN" id="DonateButtonNav">DONATE</a>
+                    </li>                    
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
     </nav>
-    <section class="strip bg-primary" style="background-color: #9dbdd8;margin-top: 100px;">
+   <section class="strip bg-primary" style="background-color: #9dbdd8;margin-top: 100px;">
         <div class="container">
             <div class="row clearfix">
                 <div class="col-md-12">
@@ -373,9 +373,13 @@
                         <h3 class="text-white pull-left" style="color: #333333;"><strong>In-Kind Donations</strong></h3>
                     </div>
                     <div class="col-sm-3 col-xs-12 pull-right text-right">                    
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN" class="btn btn-primary" style="margin-top: 9px;">
-                            Donate</a>
+                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN" class="btn btn-primary btn-lg" style="margin-top: 9px;">
+                            DONATE
+                        </a>
                     </div>
+                    <br>
+                    <br>
+                    <br>
                 </div>
             </div>
         </section>
