--- a/newsletter.html
+++ b/newsletter.html
@@ -71,10 +71,10 @@
                     <li class="dropdown">
                         <a href="students.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">STUDENTS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="students.html">Introduction</a></li>
-                          <li><a href="students.html">Biotech Academy</a></li>
-                          <li><a href="students.html">Internship</a></li>
-                          <li><a href="students.html">Resources</a></li>                  
+                          <li><a href="students.html">INTRODUCTION</a></li>
+                          <li><a href="students.html">BIOTECH ACADEMY</a></li>
+                          <li><a href="students.html">INTERNSHIP</a></li>
+                          <li><a href="students.html">RESOURCES</a></li>                  
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -87,19 +87,19 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="events.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">News & Events <span class="caret"></span></a>
+                        <a href="events.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">NEWS & EVENTS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="followus.html">Follow Us</a></li>
-                          <li><a href="blog.html">Blog</a></li>
-                          <li><a href="events.html">Upcoming Events</a></li>
-                          <li><a href="events.html">Past Events</a></li>                                             
+                          <li><a href="followus.html">FOLLOW US</a></li>
+                          <li><a href="blog.html">BLOG</a></li>
+                          <li><a href="events.html">UPCOMING EVENTS</a></li>
+                          <li><a href="events.html">PAST EVENTS</a></li>                                             
                         </ul>
                     </li>                    
                     <li>
-                        <a href="contactus.html">Contact Us</a>
+                        <a href="contactus.html">CONTACT US</a>
                     </li>
                     <li>
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN" style="background-color: #337ab7; color: #f8f8f8;">DONATE</a>
+                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN" id="DonateButtonNav">DONATE</a>
                     </li>                    
                 </ul>
             </div>
@@ -107,7 +107,7 @@
         </div>
         <!-- /.container -->
     </nav>
-    <div class="content-section-b marginForPages">
+   <div class="content-section-b marginForPages">
         <div class="container">
             <div class="row" style="text-align:center;">
                 <h1>
