--- a/blog.html
+++ b/blog.html
@@ -72,9 +72,9 @@
                         <a href="students.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">STUDENTS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                           <li><a href="students.html">INTRODUCTION</a></li>
-                          <li><a href="students.html">BIOTECH ACADEMY</a></li>
-                          <li><a href="students.html">INTERNSHIP</a></li>
-                          <li><a href="students.html">RESOURCES</a></li>                  
+                          <li><a href="students.html#AnchorForBiotechAcademy">BIOTECH ACADEMY</a></li>
+                          <li><a href="students.html#AnchorForInternship">INTERNSHIP</a></li>
+                          <li><a href="students.html#AnchorForInternship">RESOURCES</a></li>                     
                         </ul>
                     </li>
                     <li class="dropdown">
