--- a/followus.html
+++ b/followus.html
@@ -80,10 +80,10 @@
                     <li class="dropdown">
                         <a href="sponsors.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SPONSORS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN">Donate</a></li>
-                          <li><a href="sponsors.html">Becoming A Sponsor</a></li>
-                          <li><a href="sponsors.html#ImpactAnchor">Impact</a></li>
-                          <li><a href="sponsors.html#CurrentSponsorAnchor">Current Sponsors</a></li>                                   
+                           <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN">DONATE</a></li>
+                          <li><a href="sponsors.html">BECOMING A SPONSOR</a></li>
+                          <li><a href="sponsors.html#ImpactAnchor">IMPACT</a></li>
+                          <li><a href="sponsors.html#CurrentSponsorAnchor">CURRENT SPONSOR</a></li>                               
                         </ul>
                     </li>
                     <li class="dropdown">
