--- a/index.html
+++ b/index.html
@@ -175,10 +175,16 @@
                         --Co-op Supervisor, Alta Bates Medical Center.
                     </p>
                     <br>
-                    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN" class="btn btn-primary">
-                        Donate To BiotechPartners</a>
-                    <a href="about.html" class="btn btn-primary">
-                        Learn More about Us</a>
+                    <div class="row">
+                    <div class="col-sm-6">    
+                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN" class="btn btn-primary btn-lg">
+                            Donate To BiotechPartners</a>
+                    </div>
+                    <div class="col-sm-3"> 
+                        <a href="about.html" class="btn btn-info btn-lg">
+                            Learn More About Us</a>
+                    </div>
+                    </div>
                     <p class="lead">
                         Biotech Partners also accepts securities as a donation. For more information on how you can donate a security, please contact Erina Atkins-Hadad, <a href="mailto:erina@mosscpa.com">erina@mosscpa.com.</a>
                     </p>
