--- a/sponsors.html
+++ b/sponsors.html
@@ -142,7 +142,7 @@
                      <hr class="section-heading-spacer">
                      <br>                     
                      <br>
-                     <p class="lead sectionLeadAbout">
+                     <p class="lead">
                      Industry sponsors, volunteers and mentors are indispensable to the success of Biotech Partners programs.
                      By welcoming co-op or intern students into their laboratories, sponsors, volunteers and mentors benefit from the students´ contributions to their team.
                      But more importantly, mentors recognize that they are contributing to the professional development of a young person who is experiencing his or her first workplace experience.
@@ -156,7 +156,7 @@
                      <hr class="section-heading-spacer">
                      <br>                     
                      <br>
-                     <p class="lead sectionLeadAbout">
+                     <p class="lead">
                      Mentors who volunteer with Biotech Partners contribute their time and provide assistance in curriculum development and technical support for the program.
                      This includes working with Biotech Partners' staff to develop a workplan for each student, and receiving guidance and support from Biotech Partners' staff.
                      Mentors often discover that helping a young person get a start in the working world is rewarding both personally and professionally-particularly if the Biotech Partners' graduate is later hired at the mentor's organization.</p>                  
