--- a/index.html
+++ b/index.html
@@ -230,7 +230,14 @@
                     <br>
                     <a href="https://twitter.com/BiotechPartner">
                         @BiotechPartner
-                    </a>                    
+                    </a>
+                    <br>
+                    <br>
+                    <a class="twitter-follow-button"
+                    href="https://twitter.com/BiotechPartner"
+                    data-size="large">
+                    Follow @BiotechPartner
+                    </a>
                     </h2>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
