--- a/index.html
+++ b/index.html
@@ -297,6 +297,23 @@
         </div>
         <!-- /.container -->
     </div>
+    
+    <section class="strip bg-primary" style="background-color: #9dbdd8;">
+        <div class="container">
+            <div class="row clearfix">
+                <div class="col-sm-9 col-xs-12 pull-left clear-fix">
+                    <h3 class="text-white pull-left" style="color: #333333;"><strong>Subscript to Biotech Partners Newsletter&nbsp;</strong></h3>
+                </div>
+                <div class="col-sm-3 col-xs-12 pull-right text-right">
+                    <a href="newsletter.html#newslettersingup" class="btn btn-primary btn-lg" style="margin-top: 9px;">Click Here</a>
+                </div>
+                <br>
+                <br>
+                <br>
+            </div>
+        </div>
+    </section>
+    
     <!-- /.content-section-a -->    
     <div class="content-section-b">
         <div class="container">
