--- a/newsletter.html
+++ b/newsletter.html
@@ -146,7 +146,7 @@
         </div>
      </div>
      
-     <div class="content-section-a">
+     <div class="content-section-a" id="newslettersingup">
         <div class="container">
             <div class="row">               
                 <h3>Previous Newsletters</h3>
