--- a/blog.html
+++ b/blog.html
@@ -112,13 +112,15 @@
             <div class="row clearfix">
                 <div class="col-md-8">
                     <h3 class="text-white pull-left" style="color: #333333;">
-                        <strong>Blog Page
+                        <strong>Biotech Partners Blog
                         </strong>                            
-                    </h3>                    
-                    <h1 style="color: #333333;">
-                        <br>
-                        Blog From Biotech Partner
-                    </h1>
+                    </h3>
+                    <br>
+                    <br>
+                    <br>
+                    <p class="lead" style="color: #333333;">
+                        Thank you for visiting our's blog! Here’s where you’ll find a lot of content from our students, staff, and other participants. </h1>
+                    </p>
                 </div>                    
             </div>
         </div>
