--- a/events.html
+++ b/events.html
@@ -92,7 +92,8 @@
                           <li><a href="followus.html">FOLLOW US</a></li>
                           <li><a href="blog.html">BLOG</a></li>
                           <li><a href="events.html">UPCOMING EVENTS</a></li>
-                          <li><a href="events.html">PAST EVENTS</a></li>                                             
+                          <li><a href="events.html">PAST EVENTS</a></li>
+                          <li><a href="newsleter.html">NEWSLETTER</a></li
                         </ul>
                     </li>                    
                     <li>
