--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                           <li><a href="blog.html">BLOG</a></li>
                           <li><a href="events.html">UPCOMING EVENTS</a></li>
                           <li><a href="events.html">PAST EVENTS</a></li>
-                          <li><a href="newsleter.html">NEWSLETTER</a></li
+                          <li><a href="newsleter.html">NEWSLETTER</a></li>
                         </ul>
                     </li>                    
                     <li>
