--- a/blog.html
+++ b/blog.html
@@ -92,7 +92,7 @@
                           <li><a href="followus.html">FOLLOW US</a></li>
                           <li><a href="blog.html">BLOG</a></li>
                           <li><a href="events.html">UPCOMING EVENTS</a></li>
-                          <li><a href="events.html">PAST EVENTS</a></li>
+                          <li><a href="pastevents.html">PAST EVENTS</a></li>
                           <li><a href="newsletter.html">NEWSLETTER</a></li>
                         </ul>
                     </li>                    
