--- a/pastevents.html
+++ b/pastevents.html
@@ -108,22 +108,77 @@
         </div>
         <!-- /.container -->
     </nav>
-   <section class="strip bg-primary" style="background-color: #9dbdd8;margin-top: 100px;">
+   
+   <div class="content-section-b marginForPages">
         <div class="container">
-            <div class="row clearfix">
-                <div class="col-md-8">
-                    <h3 class="text-white pull-left" style="color: #333333;">
-                        <strong>Events Page
-                        </strong>                            
-                    </h3>                    
-                    <h1 style="color: #333333;">
-                        <br>
-                        Events From Biotech Partners
-                    </h1>
-                </div>                    
+            <div class="row" style="text-align:center;">
+                <h1>
+                    Biotech Partners Past Events
+                </h1>
+                <h4>
+                    Check Our Past Events
+                </h4>
             </div>
         </div>
-    </section>        
+   </div>
+   
+   <div class="content-section-a">
+        <div class="container">
+            <div class="col-md-4">
+                <img src="img/events/bravo2016.png" class="img-responsive" alt="">
+            </div>
+            <div class="col-xs-12 col-md-8">
+               <p class="lead" style="font-size: 17px;">                        
+                    <b>BRAVO! 2016 </b>
+                    <br>
+                    Our 5th annual BRAVO! Event. Celebrated Biotech Partners student at Berkeley High School on Saturday, August 13th.
+                    <br>
+                    BRAVO! is an exhibition of knowledge and a celebration of youth development. We kick-off this celebration with the science poster competition of Biotech Partners’ high school Biotech Academy summer interns – nearly 70 students – as well as an awards ceremony for the interns and young professionals who have completed our community college programs.
+                    We also take this opportunity to recognize and thank our funders, intern hosts and mentors, such as you, and other partners. 
+                    <br>
+                    <br>
+                    <a href="https://www.flickr.com/photos/biotech_partners/8653224820/">Check This Event</a>
+                </p>
+            </div>
+        </div>
+   </div>
+   <div class="content-section-b">
+        <div class="container">
+            <div class="col-md-4">
+                <img src="img/events/pastevents/project6-bp.jpg" class="img-responsive" alt="">
+            </div>
+            <div class="col-xs-12 col-md-8">
+               <p class="lead" style="font-size: 17px;">                        
+                    <b>Gala 2013</b>
+                    <br>
+                    Biotech Partners 2013 Gala at the California Academy of Sciences in San Francisco, CA. April 2013
+                    <br>
+                    <br>
+                    <a href="https://www.flickr.com/photos/biotech_partners/8653379626/">Check This Event</a>
+                </p>
+            </div>
+        </div>
+   </div>
+   <div class="content-section-a">
+        <div class="container">
+            <div class="col-md-4">
+                <img src="img/events/pastevents/project2-bp.jpg" class="img-responsive" alt="">
+            </div>
+            <div class="col-xs-12 col-md-8">
+               <p class="lead" style="font-size: 17px;">                        
+                    <b>Posters and Graduation 2010</b>
+                    <br>
+                    On August 17, 2010 Biotech Partners honored the interns and graduates of the Biotech Academy classes at Berkeley High School and Oakland Technical High School.
+                    The celebration and Posters competition took place at the Oakland Tech Girl's Gym with special guest judges from government, education and industry.
+                    <br>
+                    <br>
+                    <a href="https://www.flickr.com/photos/biotechpartners/sets/72157624748599325/">Check This Event</a>
+                </p>
+            </div>
+        </div>
+   </div>
+   
+    <hr>
     <!-- Footer -->
     <footer>
         <div class="container">
