--- a/students.html
+++ b/students.html
@@ -92,7 +92,7 @@
                           <li><a href="followus.html">FOLLOW US</a></li>
                           <li><a href="blog.html">BLOG</a></li>
                           <li><a href="events.html">UPCOMING EVENTS</a></li>
-                          <li><a href="events.html">PAST EVENTS</a></li>
+                          <li><a href="pastevents.html">PAST EVENTS</a></li>
                           <li><a href="newsletter.html">NEWSLETTER</a></li>
                         </ul>
                     </li>                    
@@ -135,12 +135,12 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Biotech Academy </h2>
+                    <h2 class="section-heading"> <span class="fa fa-paperclip fa-2x"></span> Biotech Academy </h2>
                     <p class="lead">
                         The Biotech Partners office are friendly, comfortable environments where you will feel encouraged to learn and grow.
                     </p>
                     <hr>
-                    <h2 class="section-heading">College Admission </h2>
+                    <h2 class="section-heading"> <span class="fa fa-gg fa-2x"></span> College Admission </h2>
                     <p class="lead">
                         Students must graduate from Biotech Partners' Biotech Academy program in order to enroll in our community college Bioescience Career Institute (BCI) program.</p>
                 </div>
@@ -161,11 +161,11 @@
                 
                 <div class="col-sm-6">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Employment </h2>
+                    <h2 class="section-heading"> <span class="fa fa-paperclip fa-2x"></span> Employment </h2>
                     <p class="lead">
                         Upon completion of Biotech Partners' community college Bioscience Career Institute program, graduates are qualified for entry-level bioscience positions with starting salaries of $35,000 - $40,000/year.</p>
                     <hr>
-                    <h2 class="section-heading">Resources </h2>
+                    <h2 class="section-heading"> <span class="fa fa-gg fa-2x"></span> Resources </h2>
                     <p class="lead">
                         For biotech scholarships and pharmaceutical jobs visit <a href="http://www.campusrxbio.com">CampusRXBio.</a>
                     </p>
