--- a/index.html
+++ b/index.html
@@ -177,14 +177,18 @@
                     </p>
                     <br>
                     <div class="row">
-                    <div class="col-sm-6">    
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN" class="btn btn-primary btn-lg">
-                            Donate To BiotechPartners</a>
-                    </div>
-                    <div class="col-sm-3"> 
-                        <a href="about.html" class="btn btn-info btn-lg">
-                            Learn More About Us</a>
-                    </div>
+                        <ul class="list-inline">
+                                <li>
+                                    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN" class="btn btn-primary btn-lg">
+                                        Donate To BiotechPartners
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="about.html" class="btn btn-info btn-lg">
+                                        Learn More About Us
+                                    </a>
+                                </li>
+                            </ul>
                     </div>
                     <p class="lead">
                         Biotech Partners also accepts securities as a donation. For more information on how you can donate a security, please contact Erina Atkins-Hadad, <a href="mailto:erina@mosscpa.com">erina@mosscpa.com.</a>
@@ -205,21 +209,22 @@
     </div>
     <!-- /.content-section-a -->
     <div class="row">
-    <section class="strip bg-primary" style="background-color: #9dbdd8;">
-        <div class="container">
-            <div class="row clearfix">
-                <div class="col-sm-9 col-xs-12 pull-left clear-fix">
-                    <h3 class="text-white pull-left" style="color: #333333;"><strong>Get BP Connection Newsletter&nbsp;</strong></h3>
-                </div>
-                <div class="col-sm-3 col-xs-12 pull-right text-right">
-                    <a href="newsletter.html" class="btn btn-primary btn-lg" style="margin-top: 9px;">Our Newsletter</a>
-                </div>
-                <br>
-                <br>
-                <br>
+        <section class="strip bg-primary" style="background-color: #9dbdd8;">
+            <div class="container">
+                <div class="row clearfix">
+                        <div class="col-lg-6">
+                            <h3 style="color: #333333;"><strong>Get BP Connection Newsletter</strong></h3>
+                        </div>
+                        <div class="col-lg-6">
+                            <ul class="list-inline banner-social-buttons">
+                                <li>
+                                    <a href="newsletter.html" class="btn btn-primary btn-lg" style="margin-top: 9px;">Our Newsletter</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
             </div>
-        </div>
-    </section>
+        </section>
     </div>
     <div class="content-section-b">
         <div class="container">
@@ -256,16 +261,17 @@
         <section class="strip bg-primary" style="background-color: #9dbdd8;">
             <div class="container">
                 <div class="row clearfix">
-                    <div class="col-sm-9 col-xs-12 pull-left clear-fix">
-                        <h3 class="text-white pull-left" style="color: #333333;"><strong>Support Biotech Partners. &nbsp;</strong></h3>
+                    <div class="col-lg-6">
+                        <h3 style="color: #333333;"><strong>Support Biotech Partners</strong></h3>
                     </div>
-                    <div class="col-sm-3 col-xs-12 pull-right text-right">                    
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN" class="btn btn-primary btn-lg" style="margin-top: 9px;">
-                            DONATE</a>
+                    <div class="col-lg-6">
+                        <ul class="list-inline banner-social-buttons">
+                            <li>
+                                <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN" class="btn btn-primary btn-lg" style="margin-top: 9px;">
+                                 DONATE</a>
+                            </li>
+                        </ul>
                     </div>
-                    <br>
-                    <br>
-                    <br>
                 </div>
             </div>
         </section>
@@ -341,21 +347,22 @@
         <!-- /.container -->
     </div>
     <div class="row">
-    <section class="strip bg-primary" style="background-color: #9dbdd8;">
-        <div class="container">
-            <div class="row clearfix">
-                <div class="col-sm-9 col-xs-12 pull-left clear-fix">
-                    <h3 class="text-white pull-left" style="color: #333333;"><strong>Subscript to Biotech Partners Newsletter&nbsp;</strong></h3>
+        <section class="strip bg-primary" style="background-color: #9dbdd8;">
+            <div class="container">
+                <div class="row clearfix">
+                    <div class="col-lg-6">
+                        <h3 style="color: #333333;"><strong>Subscript to Biotech Partners Newsletter</strong></h3>
+                    </div>
+                    <div class="col-lg-6">
+                        <ul class="list-inline banner-social-buttons">
+                            <li>
+                                <a href="newsletter.html#newslettersingup" class="btn btn-primary btn-lg" style="margin-top: 9px;">Click Here</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col-sm-3 col-xs-12 pull-right text-right">
-                    <a href="newsletter.html#newslettersingup" class="btn btn-primary btn-lg" style="margin-top: 9px;">Click Here</a>
-                </div>
-                <br>
-                <br>
-                <br>
             </div>
-        </div>
-    </section>
+        </section>
     </div>
     <!-- /.content-section-b -->
     <a name="contact"></a>
