--- a/sponsors.html
+++ b/sponsors.html
@@ -370,18 +370,19 @@
         <section class="strip bg-primary" style="background-color: #9dbdd8;">
             <div class="container">
                 <div class="row clearfix">
-                    <div class="col-sm-9 col-xs-12 pull-left clear-fix">
-                        <h3 class="text-white pull-left" style="color: #333333;"><strong>In-Kind Donations</strong></h3>
+                        <div class="col-lg-6">
+                            <h3 style="color: #333333;"><strong>In-Kind Donations</strong></h3>
+                        </div>
+                        <div class="col-lg-6">
+                            <ul class="list-inline banner-social-buttons">
+                                <li>
+                                    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN" class="btn btn-primary btn-lg" style="margin-top: 9px;">
+                                        DONATE
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="col-sm-3 col-xs-12 pull-right text-right">                    
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN" class="btn btn-primary btn-lg" style="margin-top: 9px;">
-                            DONATE
-                        </a>
-                    </div>
-                    <br>
-                    <br>
-                    <br>
-                </div>
             </div>
         </section>
     </div>
