--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <br>
                     <br>
                     <div class="inline-video-wrapper">
-                        <iframe src="https://player.vimeo.com/video/92287182?title=0&byline=0&portrait=0" width="550" height="330" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                        <iframe src="https://player.vimeo.com/video/92287182?title=0&byline=0&portrait=0" width="100%" height="330" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
