--- a/newsletter.html
+++ b/newsletter.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <title>Biotech Partners - Newsletter</title>
 
     <!-- Bootstrap Core CSS -->
