--- a/about.html
+++ b/about.html
@@ -319,30 +319,36 @@
                 </p>
                 </h2>                
                 <a href="http://pharma.bayer.com/">
-                <img class="background-image" alt="Background Image" src="img/sponsors/BayerHealthCare.jpg" style="zoom:10%;">
+                <img class="background-image" alt="Background Image" src="img/sponsors/BayerHealthCare.jpg" style="width: 14%; height: 14%;">
+                </a>
+                <a href="http://gene.com/">
+                <img class="background-image" alt="Background Image" src="img/sponsors/logo-genentech.jpg" style="width: 16%; height: 16%;">
+                </a>
+                <a href="http://www.gilead.com/">
+                <img class="background-image" alt="Background Image" src="img/sponsors/Gilead_Sciences_Logo.svg.png" style="width: 16%; height: 16%;">
                 </a>
                 <a href="https://www.rotary.org">
-                <img class="background-image" alt="Background Image" src="img/sponsors/RotaryInternaional.jpg" style="zoom:30%;">
+                <img class="background-image" alt="Background Image" src="img/sponsors/RotaryInternaional.jpg" style="width: 7%; height: 7%;">
                 </a>
                 <a href="https://www.boehringer-ingelheim.com/">
-                <img class="background-image" alt="Background Image" src="img/sponsors/BoehringerIngelheim.jpg" style="zoom:30%;">
+                <img class="background-image" alt="Background Image" src="img/sponsors/BoehringerIngelheim.jpg">
                 </a>
                 <a href="http://eurekainc.com/therapeutics/">
-                <img class="background-image" alt="Background Image" src="img/sponsors/Eureka.png" style="zoom:10%;">
+                <img class="background-image" alt="Background Image" src="img/sponsors/Eureka.png" >
                 </a>
                 
                 <a href="http://kindredbio.com/">
-                <img class="background-image" alt="Background Image" src="img/sponsors/Kindred Bio.png" style="zoom:45%;">
+                <img class="background-image" alt="Background Image" src="img/sponsors/Kindred Bio.png">
                 </a>
                 <a href="http://www.ci.berkeley.ca.us/Home.aspx">
-                <img class="background-image" alt="Background Image" src="img/sponsors/CityOfBerkeley.jpg" style="zoom:35%;">
+                <img class="background-image" alt="Background Image" src="img/sponsors/CityOfBerkeley.jpg" style="width: 9%; height: 9%;">
                 </a>
-                <img class="background-image" alt="Background Image" src="img/sponsors/EtchWaveConsulting.jpg" style="zoom:35%;">
+                <img class="background-image" alt="Background Image" src="img/sponsors/EtchWaveConsulting.jpg">
                 <a href="http://www.lbl.gov/">
-                <img class="background-image" alt="Background Image" src="img/sponsors/Berkeleylab.jpg" style="zoom:35%;">
+                <img class="background-image" alt="Background Image" src="img/sponsors/Berkeleylab.jpg" style="width: 9%; height: 9%;">
                 </a>
                 <a href="http://www.toyota.com/">
-                <img class="background-image" alt="Background Image" src="img/sponsors/Toyota.jpg" style="zoom:50%;">
+                <img class="background-image" alt="Background Image" src="img/sponsors/Toyota.jpg" style="width: 14%; height: 14%;">
                 </a>               
             </div>
         </div>
