--- a/followus.html
+++ b/followus.html
@@ -207,9 +207,11 @@
                     </a>
                 </div>
                 <div class="col-md-6">
-                    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FBiotech-Partners-116051438422319%2F&tabs=timeline&width=500&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="100%" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+                    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FBiotech-Partners-116051438422319%2F&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="120%" height="500px" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true">
+                    </iframe>
                 </div>
-            </div>
+            
+                </div>
 
         </div>
         <!-- /.container -->
