fixed and some image

--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
                         <ul class="dropdown-menu">
                           <li><a href="students.html">INTRODUCTION</a></li>
                           <li><a href="students.html#AnchorForBiotechAcademy">BIOTECH ACADEMY</a></li>
-                          <li><a href="students.html#AnchorForInternship">INTERNSHIP</a></li>
-                          <li><a href="students.html#AnchorForInternship">RESOURCES</a></li>                    
+                          <li><a href="students.html#AnchorBioscienceCareerInstitute">BIOSCIENCE CAREER INSTITUTE</a></li>                   
                         </ul>
                     </li>
                     <li class="dropdown">
