fixed and SPONSORS

--- a/followus.html
+++ b/followus.html
@@ -100,7 +100,7 @@
                            <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN">DONATE</a></li>
                           <li><a href="sponsors.html">BECOMING A SPONSOR</a></li>
                           <li><a href="sponsors.html#ImpactAnchor">IMPACT</a></li>
-                          <li><a href="sponsors.html#CurrentSponsorAnchor">CURRENT SPONSOR</a></li>                               
+                          <li><a href="sponsors.html#CurrentSponsorAnchor">CURRENT SPONSORS</a></li>                               
                         </ul>
                     </li>
                     <li class="dropdown">
