fixed and SPONSORS

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         <ul class="list-inline">
                                 <li>
                                     <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN" class="btn btn-primary btn-lg">
-                                        Donate To BiotechPartners
+                                        Donate to BiotechPartners
                                     </a>
                                 </li>
                                 <li>
