--- a/sponsors.html
+++ b/sponsors.html
@@ -181,7 +181,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN" style="margin-top: 40px;">
-                        <img class="img-responsive" src="./img/sponsorspage/WEBSITE1.JPG" alt="" style="margin-top: 40px;">   
+                        <img class="img-responsive" src="./img/sponsorspage/WEBSITE1.jpg" alt="" style="margin-top: 40px;">   
                     </a> 
                 </div> 
                 <div class="col-md-6">
