fixed and SPONSORS

--- a/staffs.html
+++ b/staffs.html
@@ -260,10 +260,8 @@
                 
                 <p class="lead sectionLead">
                     <strong>
-                        Jennifer Wade, Ph.D. 
+                        Jennifer Simone Wade,, Ph.D. 
                     </strong>
-                    <br>
-                    Biology Instructors, Laney College
                     <br>
                     San Francisco Bay Area
                 </p>
