--- a/newsletter.html
+++ b/newsletter.html
@@ -135,7 +135,7 @@
                 <h4>
                     Connecting Youth with the World of Biotechnology.
                 </h4>
-                <iframe d="theFrame" src="pdf/BP_Fall2015_Newsletter.pdf" style="width:90%; height:2100px;" frameborder="0">                    
+                <iframe id="theFrame" src="pdf/BP_Fall2015_Newsletter.pdf" style="width:90%; height:2100px;" frameborder="0">                    
                 </iframe>
                 <script>
                 document.getElementById("theFrame").contentWindow.onload = function() {
