--- a/index.html
+++ b/index.html
@@ -284,10 +284,10 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Bravo! 2016</h2>
                     <p class="lead">                        
-                        BRAVO! 2016 is Underway!
+                        BRAVO! 2016!
                         <br>
                         <br>
-                        Join us at Berkeley High School on Saturday, August 13th to celebrate our 5th annual BRAVO! Event.
+                        Biotech Partners was at Berkeley High School on Saturday, August 13th to celebrate our 5th annual BRAVO! Event.
                         <br>
                         <br>
                         BRAVO! is an exhibition of knowledge and a celebration of youth development.
