--- a/events.html
+++ b/events.html
@@ -179,6 +179,20 @@
         </div>
     </div>
     
+    <div class="content-section-a">
+        <div class="container">
+            <div class="col-sm-6">
+                <hr class="section-heading-spacer">
+                <div class="clearfix"></div>
+                <h2 class="section-heading">More Events are coming </h2>
+            </div>
+            <div class="col-sm-6">
+                <h4> <span class="fa fa-arrow-circle-down"></span> Gala Spring 2017</h4>
+                <h4> <span class="fa fa-arrow-circle-down"></span> Bravo Summer 2017</h4>
+            </div>
+        </div>
+    </div>
+    
     <div class="row">
         <section class="strip bg-primary" style="background-color: #9dbdd8;">
             <div class="container">
