--- a/events.html
+++ b/events.html
@@ -184,7 +184,7 @@
             <div class="col-sm-6">
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
-                <h2 class="section-heading">More Events are coming </h2>
+                <h2 class="section-heading">More events are coming </h2>
             </div>
             <div class="col-sm-6">
                 <h4> <span class="fa fa-arrow-circle-down"></span> Gala Spring 2017</h4>
